added a cat image and a few more elements

--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<htlm>
+    <head>
+        <title>Test page</title>
+    </head>
+<body>
 <h1> Hey. I'm a big heading</h1>
-<p>Hey. I'm a peragraph elemnt. Cool, right?</p>
+<p>Hey. I'm a <b>peragraph</b> elemnt. Cool, right?</p>
+<p>My name is:<br>
+Kitty Cat</p>
 <a href="https://google.com" target=''_blank'' title="lets go to Google">Click me! I am a link.</a>
+<img src="img/cat.jpeg">
+</body>
+</htlm>
