Added the CSS for Kati's Website

--- a/Kati's Website.html
+++ b/Kati's Website.html
@@ -3,6 +3,8 @@
 <head>
     <title>Lone Wolf</title>
     <link rel="icon" href="img/kati.jpg">
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@286&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/kati.css">
 </head>
 <body>
     <!--header element -->
@@ -19,13 +21,13 @@
             no matter how many people she meats, she will always be a lone wolf. 
             Destined to travel the worl alone.</p>
         <img src="img/kati2.jpg">
-        <p>Kati and her friends</p>
+        <p class="caption"></p>Kati in nature</p>
         <h2>Kati's Characteristics</h2>
         <ol>
 
         <!--Characteristics-->
             <li>She has red hair and quirky glasses</li>
-            <li>She is SLovenian, but her home is the world</li>
+            <li>She is Slovenian, but her home is the world</li>
             <li>She has a Bachelors in Arts and Culture</li>
         </ol>
 
