--- a/Kati's Website.html
+++ b/Kati's Website.html
@@ -21,7 +21,7 @@
             no matter how many people she meats, she will always be a lone wolf. 
             Destined to travel the worl alone.</p>
         <img src="img/kati2.jpg">
-        <p class="caption">Kati in nature</p>
+        <p class="caption">Kati surrounded by nature</p>
         <h2>Kati's Characteristics</h2>
         <ol>
 
